--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.libraryapp.Main"
-            prefHeight="400.0" prefWidth="600.0">
+<StackPane fx:controller="org.example.libraryapp.controller.MainController" xmlns:fx="http://javafx.com/fxml/1" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-</AnchorPane>
+   <ImageView fx:id="logo" fitWidth="200" fitHeight="200" />
+
+   <VBox fx:id="textContainer" alignment="CENTER" spacing="10">
+      <Text fx:id="appName" fill="GOLD" opacity="0">
+         <font>
+            <Font name="Impact" size="50" />
+         </font>
+      </Text>
+      <Text fx:id="subtitle" fill="GOLD" opacity="0">
+         <font>
+            <Font name="Impact" size="30" />
+         </font>
+      </Text>
+   </VBox>
+
+   <StackPane layoutX="980.0" layoutY="10.0" alignment="TOP_RIGHT" style="-fx-padding: 10;">
+      <Button fx:id="closeButton" text="X" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 18;" />
+   </StackPane>
+
+   <Rectangle arcWidth="40.0" arcHeight="40.0" fill="BLACK" style="-fx-background-radius: 20;" />
+
+</StackPane>
