--- a/src/main/resources/deleteMember.fxml
+++ b/src/main/resources/deleteMember.fxml
@@ -2,12 +2,11 @@
 
 <?import com.jfoenix.controls.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.libraryapp.controller.NewMemberController">
+<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.libraryapp.controller.DeleteMemberController">
 
     <children>
 
@@ -102,29 +101,6 @@
             </children>
 
         </VBox>
-      <Pane prefHeight="825.0" prefWidth="1035.0">
-         <children>
-            <TextField fx:id="nameField" layoutX="394.0" layoutY="134.0" prefHeight="25.0" prefWidth="243.0" promptText="Name" />
-            <Label layoutX="360.0" layoutY="62.0" text="New Member Registration Form" textFill="#ffff66">
-               <font>
-                  <Font name="Yu Gothic Bold" size="20.0" />
-               </font>
-            </Label>
-            <TextField fx:id="surnameField" layoutX="394.0" layoutY="192.0" prefHeight="25.0" prefWidth="243.0" promptText="Surname" />
-            <TextField fx:id="addressField" layoutX="394.0" layoutY="250.0" prefHeight="25.0" prefWidth="243.0" promptText="Adress" />
-            <TextField fx:id="phoneNumberField" layoutX="394.0" layoutY="308.0" prefHeight="25.0" prefWidth="243.0" promptText="Phone Number" />
-            <TextField fx:id="emailField" layoutX="394.0" layoutY="366.0" prefHeight="25.0" prefWidth="243.0" promptText="Email" />
-             <JFXButton />
-            <Button layoutX="394.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#handleSubmitButtonAction" prefHeight="25.0" prefWidth="109.0" text="Submit">
-               <font>
-                  <Font name="Yu Gothic Regular" size="12.0" />
-               </font>
-            </Button>
-            <Button layoutX="528.0" layoutY="422.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Reset" />
-         </children>
-         <effect>
-            <Glow level="0.31" />
-         </effect></Pane>
 
     </children>
 
