--- a/src/main/resources/loansHistory.fxml
+++ b/src/main/resources/loansHistory.fxml
@@ -2,12 +2,11 @@
 
 <?import com.jfoenix.controls.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.libraryapp.controller.NewMemberController">
+<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.libraryapp.controller.LoansHistoryController">
 
     <children>
 
@@ -45,7 +44,7 @@
 
                         </JFXButton>
                         <!-- ADD NEW MEMBER -->
-                        <JFXButton fx:id="newMemberButton" layoutX="17.0" layoutY="211.0" onAction="#handleNewMemberButtonAction" onMouseClicked="#handleNewMemberButtonAction" prefHeight="53.0" prefWidth="248.0" styleClass="btn_workbench11" stylesheets="@style.css" text="Add new Member" textFill="#c6b6b6">
+                        <JFXButton fx:id="newMemberButton" layoutX="17.0" layoutY="211.0" onMouseClicked="#handleNewMemberButtonAction" prefHeight="53.0" prefWidth="248.0" styleClass="btn_workbench11" stylesheets="@style.css" text="Add new Member" textFill="#c6b6b6">
 
                             <font>
 
@@ -94,6 +93,11 @@
                             </font>
 
                         </JFXButton>
+                        <JFXButton fx:id="nextButton" layoutX="17.0" layoutY="552.0" onMouseClicked="#nextButtonAction" prefHeight="53.0" prefWidth="248.0" styleClass="btn_workbench11" stylesheets="@style.css" text="Siguiente" textFill="#c6b6b6">
+                            <font>
+                                <Font name="Century Gothic Bold" size="13.0" />
+                            </font>
+                        </JFXButton>
 
                     </children>
 
@@ -102,29 +106,12 @@
             </children>
 
         </VBox>
-      <Pane prefHeight="825.0" prefWidth="1035.0">
-         <children>
-            <TextField fx:id="nameField" layoutX="394.0" layoutY="134.0" prefHeight="25.0" prefWidth="243.0" promptText="Name" />
-            <Label layoutX="360.0" layoutY="62.0" text="New Member Registration Form" textFill="#ffff66">
-               <font>
-                  <Font name="Yu Gothic Bold" size="20.0" />
-               </font>
-            </Label>
-            <TextField fx:id="surnameField" layoutX="394.0" layoutY="192.0" prefHeight="25.0" prefWidth="243.0" promptText="Surname" />
-            <TextField fx:id="addressField" layoutX="394.0" layoutY="250.0" prefHeight="25.0" prefWidth="243.0" promptText="Adress" />
-            <TextField fx:id="phoneNumberField" layoutX="394.0" layoutY="308.0" prefHeight="25.0" prefWidth="243.0" promptText="Phone Number" />
-            <TextField fx:id="emailField" layoutX="394.0" layoutY="366.0" prefHeight="25.0" prefWidth="243.0" promptText="Email" />
-             <JFXButton />
-            <Button layoutX="394.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#handleSubmitButtonAction" prefHeight="25.0" prefWidth="109.0" text="Submit">
-               <font>
-                  <Font name="Yu Gothic Regular" size="12.0" />
-               </font>
-            </Button>
-            <Button layoutX="528.0" layoutY="422.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Reset" />
-         </children>
-         <effect>
-            <Glow level="0.31" />
-         </effect></Pane>
+      <TableView fx:id="loansTable" prefHeight="720.0" prefWidth="1005.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
 
     </children>
 
