--- a/src/main/resources/loan.fxml
+++ b/src/main/resources/loan.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.libraryapp.controller.LoanControllerIGU">
+<HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.libraryapp.controller.LoanControllerIGU">
 
     <children>
 
@@ -101,6 +101,31 @@
             </children>
 
         </VBox>
+      <Pane prefHeight="825.0" prefWidth="1035.0">
+         <children>
+            <Label layoutX="352.0" layoutY="90.0" prefHeight="39.0" prefWidth="194.0" text="Loan Book" textFill="#ffff66">
+               <font>
+                  <Font name="Yu Gothic Bold" size="36.0" />
+               </font>
+            </Label>
+            <Label layoutX="321.0" layoutY="195.0" prefHeight="22.0" prefWidth="114.0" text="Member ID :" textFill="#ffff66">
+               <font>
+                  <Font name="Yu Gothic Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="321.0" layoutY="233.0" prefHeight="24.0" prefWidth="86.0" text="Book ID : " textFill="#ffff66">
+               <font>
+                  <Font name="Yu Gothic Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="memberIdTextField" layoutX="455.0" layoutY="194.0" />
+            <TextField fx:id="bookIdTextField" layoutX="435.0" layoutY="233.0" prefHeight="25.0" prefWidth="169.0" />
+            <JFXButton fx:id="loan_book_button" layoutX="402.0" layoutY="398.0" mnemonicParsing="false" onMouseClicked="#loanBookButtonAction" text="Loan" textAlignment="CENTER" textFill="#232322">
+               <font>
+                  <Font name="Yu Gothic Bold" size="20.0" />
+               </font>
+            </JFXButton>
+         </children></Pane>
 
     </children>
 
